--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,177 @@
-.home, .servise {
+@font-face {
+  font-family: "BanderaProHeavy";
+  src: url("../fonts/BanderaProHeavy.woff") format("woff"), url("../fonts/BanderaProHeavy.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: "BanderaPro";
+  src: url("../fonts/BanderaPro.woff") format("woff"), url("../fonts/BanderaPro.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal; }
+
+.home, .servise, .contact, .vacancies {
   background-repeat: no-repeat;
   background-size: cover; }
+
+body {
+  color: #fff;
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif; }
+
+* {
+  color: #fff; }
+
+.container {
+  max-width: 1600px; }
 
 p {
   margin-bottom: 0; }
 
+a {
+  color: #fff; }
+  a:focus, a:hover {
+    text-decoration: underline;
+    color: #fff; }
+
+.text-green {
+  color: #9e947e; }
+
+.text-crossed {
+  text-decoration: line-through; }
+
+.title_big {
+  font-family: "BanderaProHeavy";
+  font-size: 90px; }
+
+.title_medium {
+  font-family: "BanderaPro";
+  font-size: 60px; }
+
+.btn {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20px;
+  border: 2px solid #fff;
+  border-radius: 0;
+  color: #fff;
+  width: 300px;
+  text-align: center;
+  padding: 15px 0; }
+  .btn:hover {
+    color: #fff; }
+  .btn_none-style-btn {
+    width: auto;
+    border: none;
+    padding: 0;
+    font-size: 18px; }
+  .btn_green {
+    background-color: #9f957f;
+    color: #000; }
+
 .home {
-  background-image: url(../img/home/bg.jpg); }
+  background-image: url(../img/home/bg.jpg);
+  padding-left: 190px; }
+  .home__title {
+    line-height: 70px; }
+    .home__title span {
+      margin-left: 20%; }
+  .home__discription {
+    margin-left: -50px; }
+  .home p {
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 20px 30px;
+    width: 50%; }
 
 .girl {
-  background-color: #000; }
+  background-color: #04060C; }
+  .girl__description {
+    top: 20%;
+    left: 38%;
+    transform: translateX(-50%); }
+  .girl__sub-title {
+    top: -60px;
+    left: -100px;
+    font-size: 50px; }
 
 .servise {
   background-image: url(../img/services/bg.jpg); }
+  .servise__sub-title {
+    margin-left: 30%; }
+  .servise ul {
+    list-style: none; }
+    .servise ul li {
+      padding: 5px 10px; }
+      .servise ul li:hover span {
+        color: #000; }
+      .servise ul li:hover {
+        background-color: #9f957f; }
+
+.contact {
+  background-image: url(../img/contact/bg.jpg); }
+  .contact__info {
+    background-color: rgba(32, 30, 30, 0.8);
+    border: 1px solid #968c77;
+    padding: 45px 130px 45px 80px; }
+  .contact h5 {
+    font-size: 20px; }
+  .contact P {
+    color: #838383; }
+
+.vacancies {
+  background-image: url(../img/vacancies/bg.png);
+  background-color: #000; }
+
+.slider-girl {
+  width: 500px;
+  margin: 0 auto;
+  transform: translateX(10%); }
+
+.prev-girl,
+.next-girl {
+  top: 105%; }
+
+.prev-girl {
+  left: -150px; }
+
+.next-girl {
+  left: 0; }
+
+.slick-prev:before, .slick-next:before {
+  font-family: none;
+  font-size: 80px;
+  color: #9f957f; }
+
+.slick-active {
+  padding: 0 80px 0 120px; }
+  .slick-active img {
+    margin-left: 120px;
+    transform: scale(1.5); }
+  .slick-active + .slider-girl__slide img {
+    margin-left: 100px; }
+
+.slider-girl__slide {
+  outline: none;
+  padding: 0 40px; }
+  .slider-girl__slide img {
+    width: 285px;
+    transition: transform 1s, margin-left 1s; }
+  .slider-girl__slide:not(.slick-active) {
+    filter: grayscale(1); }
+
+.slick-list {
+  overflow: visible; }
+
+p {
+  margin-bottom: 0; }
+
+a {
+  color: #fff; }
+  a:focus, a:hover {
+    text-decoration: underline;
+    color: #fff; }
+
+.text-green {
+  color: #9e947e; }
+
+.text-crossed {
+  text-decoration: line-through; }
