--- a/scss/style.scss
+++ b/scss/style.scss
@@ -170,7 +170,8 @@ a{
         &__body{
             div{
                 display: flex;
-                justify-content: space-between;
+                flex-direction: column;
+                justify-content: start;
             }
             #description{
                 margin-bottom: 3rem;
@@ -178,6 +179,15 @@ a{
         }
     }
 
+}
+
+#description-price{
+    div{
+        margin: 5px 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
 
 .item-programm__active{
