--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,7 +63,7 @@ a{
     }
 
     &_medium{
-        font-family: "BanderaPro";
+        font-family: "BanderaProHeavy";
         font-size: 60px;
     }
 }
@@ -156,6 +156,13 @@ a{
         left: -100px;
         font-size: 50px;
     }
+    .btn{
+        width: 280px;
+        position: absolute;
+        bottom: -240px;
+        left: 22%;
+        transform: translateX(-50%)
+    }
 }
 
 .servise{
@@ -167,7 +174,11 @@ a{
     }
 
     ul{
+        height: 260px;
+        overflow-y: auto;
         list-style: none;
+        scrollbar-color: #458245 #714826;     /* «цвет ползунка» «цвет полосы скроллбара» */
+        scrollbar-width: auto | thin | none;  /* толщина */
         li{
             padding: 5px 10px;
             margin: 15px 0;
