--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @font-face {
   font-family: "BanderaProHeavy";
   src: url("../fonts/BanderaProHeavy.woff") format("woff"), url("../fonts/BanderaProHeavy.woff2") format("woff2");
@@ -43,11 +42,11 @@ a {
 
 .title_big {
   font-family: "BanderaProHeavy";
-  font-size: 90px; }
+  font-size: 38px; }
 
 .title_medium {
   font-family: "BanderaProHeavy";
-  font-size: 60px; }
+  font-size: 30px; }
 
 .btn {
   font-family: 'Montserrat', sans-serif;
@@ -85,19 +84,27 @@ a {
     .btn_call:hover {
       background-color: transparent; }
 
+.navbar-nav .active {
+  border-bottom: 1px solid #9f957f;
+  transition: border-bottom .5s; }
+  .navbar-nav .active .nav-link {
+    color: #9f957f !important; }
+
+.logo-img {
+  width: 100px; }
+
 .home {
   background-image: url(../img/home/bg.jpg);
-  padding-left: 190px; }
+  padding-left: 0px;
+  padding-top: 100px; }
   .home__title {
-    line-height: 70px; }
+    line-height: 35px; }
     .home__title span {
       margin-left: 20%; }
   .home__discription {
-    margin-left: -50px; }
+    margin-left: 0px; }
   .home p {
-    background-color: rgba(0, 0, 0, 0.8);
-    padding: 20px 30px;
-    width: 50%; }
+    width: 70%; }
 
 .girl {
   background-color: #04060C; }
@@ -116,6 +123,18 @@ a {
     left: 22%;
     transform: translateX(-50%); }
 
+.line {
+  position: absolute;
+  width: 50%;
+  height: 1px;
+  background-color: #fff;
+  transform: rotate(-30deg); }
+  .line_l {
+    left: -180px;
+    bottom: 304px; }
+  .line_r {
+    right: -220px; }
+
 .servise {
   background-image: url(../img/services/bg.jpg); }
   .servise__sub-title {
@@ -123,11 +142,7 @@ a {
   .servise ul {
     height: 260px;
     overflow-y: auto;
-    list-style: none;
-    scrollbar-color: #458245 #714826;
-    /* «цвет ползунка» «цвет полосы скроллбара» */
-    scrollbar-width: auto | thin | none;
-    /* толщина */ }
+    list-style: none; }
     .servise ul li {
       padding: 5px 10px;
       margin: 15px 0;
@@ -166,7 +181,7 @@ a {
   .contact__info {
     background-color: rgba(32, 30, 30, 0.8);
     border: 1px solid #968c77;
-    padding: 45px 130px 45px 80px; }
+    padding: 5px; }
   .contact h5 {
     font-size: 20px; }
   .contact P {
