--- a/scss/style.scss
+++ b/scss/style.scss
@@ -68,6 +68,25 @@ a{
     }
 }
 
+.btn-mobile_girl{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    border: 2px solid #fff;
+    border-radius: 0;
+    color: #fff;
+    width: 300px;
+    text-align: center;
+    padding: 10px 0;
+    background-color: transparent;
+    transition: background-color .3s, border .5s;
+    right: 0;
+    bottom: 40px;
+    position: absolute;
+    width: 170px;
+    left: auto;
+    transform: translateX(0px);
+}
+
 .btn{
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
@@ -156,17 +175,16 @@ a{
 
 .girl{
     background-color: #04060C;
-
+    padding: 200px 0;
     &__description{
         top: 20%;
-        left: 38%;
-        transform: translateX(-50%);
+        left: 3%;
     }
 
     &__sub-title{
         top: -60px;
-        left: -100px;
-        font-size: 50px;
+        left: 0;
+        font-size: 30px;
     }
     .btn{
         width: 280px;
@@ -258,11 +276,12 @@ a{
     @extend %bg-img;
     background-image: url(../img/contact/bg.jpg);
     background-position: center 80%;
+    padding: 200px 0;
 
     &__info{
-        background-color: rgba($color: #201e1e, $alpha: 0.8);
+        background-color: rgba($color: #201e1e, $alpha: 0.9);
         border: 1px solid #968c77;
-        padding: 5px;
+        padding: 20px;
     }
     h5{
         font-size: 20px;
@@ -278,27 +297,28 @@ a{
     background-color: #000;
 }
 .slider-girl{
-    width: 500px;
-    margin: 0 auto;
+    width: 100%;
+    margin: 0;
     transform: translateX(10%);
+    right: 30px;
 }
 
 .prev-girl,
 .next-girl{
-    top: 105%;
+    top: 145%;
 }
 
 .prev-girl{
-    left: -150px;
+    left: 0px;
 }
 
 .next-girl{
-    left: 0;
+    left: 75px;
 }
 
 .slick-prev:before, .slick-next:before{
     font-family: none;
-    font-size: 80px;
+    font-size: 60px;
     color: #9f957f;
 }
 
@@ -320,7 +340,7 @@ a{
     padding: 0 40px;
     
     img{
-        width: 285px;
+        width: 160px;
         transition: transform 1s, margin-left 1s;
     }
     &:not(.slick-active){
