--- a/css/media.css
+++ b/css/media.css
@@ -57,4 +57,6 @@
 
 @media (min-width: 1200px) {
   .contact__info {
-    padding: 45px 130px 45px 80px; } }
+    padding: 45px 130px 45px 80px; }
+  .ban img {
+    width: 80px; } }
