--- a/scss/style.scss
+++ b/scss/style.scss
@@ -238,7 +238,7 @@ a{
     .btn{
         width: 280px;
         position: absolute;
-        bottom: -240px;
+        bottom: -150px;
         left: 22%;
         transform: translateX(-50%)
     }
@@ -268,6 +268,7 @@ a{
 .servise{
     @extend %bg-img;
     background-image: url(../img/services/bg.jpg);
+    background-position-x: center;
 
     &__sub-title{
         margin-left: 30%;
