--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,14 @@
 body {
   color: #fff;
   font-size: 16px;
-  font-family: 'Montserrat', sans-serif; }
+  font-family: 'Montserrat', sans-serif;
+  height: 100%; }
+
+html {
+  height: 100%; }
+
+.section {
+  height: 100%; }
 
 * {
   color: #fff; }
@@ -146,9 +153,7 @@ a {
     padding: 10px; }
 
 .home {
-  background-image: url(../img/home/bg.jpg);
-  padding-left: 0px;
-  padding-top: 130px; }
+  background-image: url(../img/home/bg.jpg); }
   .home__title {
     line-height: 35px; }
     .home__title span {
