--- a/css/media.css
+++ b/css/media.css
@@ -19,6 +19,20 @@
     background-repeat: no-repeat; } }
 
 @media (min-width: 768px) {
+  .title_big {
+    font-size: 63px; }
+  .ban {
+    right: auto;
+    left: 0; }
+  .home {
+    background-position-x: -390px; }
+    .home__title {
+      line-height: 55px; }
+    .home__discription {
+      font-family: "BanderaPro";
+      font-size: 42px; }
+    .home__inner {
+      margin-top: 140px; }
   .girl__description {
     top: 20%;
     left: 28%;
@@ -43,9 +57,7 @@
   .next-girl {
     left: 0; }
   .nav-link {
-    font-size: 18px; }
-  .navbar {
-    background-color: rgba(0, 0, 0, 0.7); } }
+    font-size: 18px; } }
 
 @media (min-width: 992px) {
   .home {
