--- a/scss/media.scss
+++ b/scss/media.scss
@@ -28,6 +28,34 @@
 }
 
 @media(min-width:768px){
+    .title{
+        &_big{
+            font-size: 63px;
+        }
+    }
+
+    .ban{
+        right: auto;
+        left: 0;
+    }
+
+    .home{
+        background-position-x: -390px;
+
+        &__title{
+            line-height: 55px;
+        }
+
+        &__discription{
+            font-family: "BanderaPro";
+            font-size: 42px;
+        }
+
+        &__inner{
+            margin-top: 140px;
+        }
+    }
+
     .girl{
 
         &__description{
@@ -70,10 +98,6 @@
     }
     .nav-link{
         font-size: 18px;
-    }
-
-    .navbar{
-        background-color: rgba($color: #000000, $alpha: .7);
     }
 }
 
