--- a/css/media.css
+++ b/css/media.css
@@ -34,7 +34,7 @@
     .home__inner {
       width: 90%;
       position: absolute;
-      bottom: 10%;
+      bottom: 15%;
       left: 10%; }
   .girl__description {
     top: 20%;
@@ -94,3 +94,24 @@
     padding: 0; }
   .navbar {
     background-color: transparent; } }
+
+@media screen and (min-height: 768px) and (max-height: 960px) {
+  .home p {
+    font-size: 14px; }
+  .home__inner {
+    width: 70%;
+    position: absolute;
+    bottom: 27%;
+    left: 3%; } }
+
+@media screen and (min-height: 960px) and (max-height: 1024px) {
+  .home__inner {
+    width: 90%;
+    position: absolute;
+    bottom: 20%;
+    left: 7%; } }
+
+@media screen and (min-height: 1024px) {
+  .home__inner {
+    top: 20%;
+    bottom: auto; } }
