--- a/scss/media.scss
+++ b/scss/media.scss
@@ -54,7 +54,7 @@
         &__inner{
             width: 90%;
             position: absolute;
-            bottom: 10%;
+            bottom: 15%;
             left: 10%;
         }
     }
@@ -161,5 +161,40 @@
     }
     .navbar{
         background-color: transparent;
+    }
+}
+
+@media screen and (min-height: 768px) and (max-height: 960px){
+    .home{
+        p{
+            font-size: 14px;
+        }
+
+        &__inner{
+            width: 70%;
+            position: absolute;
+            bottom: 27%;
+            left: 3%;
+        }
+    }
+}
+
+@media screen and (min-height: 960px) and (max-height: 1024px){
+    .home{
+        &__inner{
+            width: 90%;
+            position: absolute;
+            bottom: 20%;
+            left: 7%;
+        }
+    }
+}
+
+@media screen and (min-height: 1024px){
+    .home{
+        &__inner{
+            top: 20%;
+            bottom: auto;
+        }
     }
 }
