--- a/css/media.css
+++ b/css/media.css
@@ -97,17 +97,16 @@
   .home__inner {
     width: 70%;
     position: absolute;
-    bottom: 20%;
+    top: 20%;
     left: 8%; } }
 
 @media screen and (min-height: 960px) and (max-height: 1024px) {
   .home__inner {
     width: 90%;
     position: absolute;
-    bottom: 30%;
+    top: 30%;
     left: 7%; } }
 
 @media screen and (min-height: 1024px) {
   .home__inner {
-    top: 20%;
-    bottom: auto; } }
+    top: 20%; } }
