--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,42 @@ a {
     background-color: #1c1e20;
     padding: 10px; }
 
+.mouse {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  border: 1px solid #fff;
+  width: 30px;
+  height: 50px;
+  border-radius: 15px; }
+  .mouse::before {
+    position: absolute;
+    content: '';
+    left: 50%;
+    transform: translateX(-50%);
+    width: 3px;
+    height: 5px;
+    border-radius: 1px;
+    background-color: #fff;
+    animation-direction: alternate;
+    animation-duration: .5s;
+    animation-name: scroll;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear; }
+
+@keyframes scroll {
+  0% {
+    top: 10px; }
+  25% {
+    top: 11px; }
+  50% {
+    top: 12px; }
+  75% {
+    top: 13px; }
+  100% {
+    top: 15px; } }
+
 .home {
   background-image: url(../img/home/bg.jpg); }
   .home__title {
