--- a/css/media.css
+++ b/css/media.css
@@ -50,7 +50,11 @@
   .slider-girl {
     width: 500px;
     margin: 0 auto;
-    transform: translateX(10%); }
+    transform: translateX(10%);
+    position: absolute;
+    right: 30%; }
+    .slider-girl img {
+      width: 225px; }
   .prev-girl,
   .next-girl {
     top: 105%; }
@@ -90,21 +94,29 @@
   .title_medium {
     font-size: 60px; } }
 
-@media screen and (min-height: 768px) and (max-height: 960px) {
+@media screen and (min-height: 600px) and (max-height: 960px) {
   .home p {
     font-size: 14px; }
   .home__inner {
     width: 70%;
     position: absolute;
     top: 20%;
-    left: 8%; } }
+    left: 8%; }
+  .contact__info {
+    padding: 5px 80px 5px 50px; }
+  .slider-girl {
+    top: 30%; } }
 
 @media screen and (min-height: 960px) and (max-height: 1024px) {
   .home__inner {
     width: 90%;
     position: absolute;
     top: 30%;
-    left: 7%; } }
+    left: 7%; }
+  .contact .container {
+    margin-top: 50px; }
+  .contact__info {
+    padding: 45px 120px 45px 50px; } }
 
 @media screen and (min-height: 1024px) {
   .home__inner {
