--- a/scss/media.scss
+++ b/scss/media.scss
@@ -84,6 +84,12 @@
         width: 500px;
         margin: 0 auto;
         transform: translateX(10%);
+        position: absolute;
+        right: 30%;
+
+        img{
+            width: 225px;
+        }
     }
 
     .prev-girl,
@@ -165,7 +171,7 @@
     }
 }
 
-@media screen and (min-height: 768px) and (max-height: 960px){
+@media screen and (min-height: 600px) and (max-height: 960px){
     .home{
         
         p{
@@ -179,6 +185,17 @@
             left: 8%;
         }
     }
+
+    .contact{
+
+        &__info{
+            padding: 5px 80px 5px 50px;
+        }
+    }
+
+    .slider-girl{
+        top: 30%;
+    }
 }
 
 @media screen and (min-height: 960px) and (max-height: 1024px){
@@ -190,6 +207,15 @@
             left: 7%;
         }
     }
+
+    .contact{
+        .container{
+            margin-top: 50px;
+        }
+        &__info{
+            padding: 45px 120px 45px 50px;
+        }
+    }
 }
 
 @media screen and (min-height: 1024px){
@@ -198,4 +224,6 @@
             top: 20%;
         }
     }
+
+
 }
