--- a/scss/media.scss
+++ b/scss/media.scss
@@ -64,6 +64,8 @@
             top: 20%;
             left: 28%;
             transform: translateX(-50%);
+            width: 180px;
+            padding-top: 50px;
         }
 
         &__sub-title{
@@ -73,11 +75,18 @@
         }
 
         .slick-prev:before, .slick-next:before{
-            font-family: none;
             font-size: 80px;
             color: #9f957f;
         }
+
+        &__btn{
+            bottom: -100px;
+        }
         
+    }
+
+    #name-girl{
+        font-size: 60px;
     }
 
     .slider-girl{
@@ -85,7 +94,7 @@
         margin: 0 auto;
         transform: translateX(10%);
         position: absolute;
-        right: 30%;
+        right: 10%;
 
         img{
             width: 225px;
@@ -98,7 +107,7 @@
     }
 
     .prev-girl{
-        left: -150px;
+        left: -110px;
     }
     
     .next-girl{
@@ -106,6 +115,20 @@
     }
     .nav-link{
         font-size: 18px;
+    }
+
+    .servise{
+        padding-top: 125px;
+        .btn{
+            width: 150px;
+            padding: 5px 0;
+
+        }
+
+        &__info-programs{
+            width: 100%;
+            right: 3px;
+        }
     }
 }
 
@@ -131,6 +154,10 @@
     .contact{
         padding: 0;
     }
+    .slider-girl{
+        right: 22%;
+    }
+
 }
 
 @media(min-width:1200px){
@@ -153,8 +180,14 @@
             width: 80px;
         }
     }
+
+    
     .girl{
         padding: 0;
+
+        &__description{
+            left: 40%;
+        }
     }
     .navbar{
         background-color: transparent;
@@ -168,6 +201,19 @@
         &_medium{
             font-size: 60px;
         }
+    }
+}
+
+@media(min-width:1600px){
+    .girl{
+        &__description{
+            left: 43%;
+            transform: translateX(-50%);
+        }
+    }
+
+    .slider-girl{
+        right: 33%;
     }
 }
 
@@ -186,6 +232,15 @@
         }
     }
 
+    .girl{
+        &__description{
+            top: 30%;
+        }
+        .title_medium{
+            font-size: 38px;
+        }
+    }
+
     .contact{
 
         &__info{
@@ -194,9 +249,35 @@
     }
 
     .slider-girl{
-        top: 30%;
+        top: 35%;
+
+        img{
+            width: 200px;
+        }
     }
 }
+
+@media screen and (min-height: 800px) and (max-height: 960px){
+    .slider-girl{
+        top: 35%;
+
+        img{
+            width: 300px;
+        }
+    }
+
+    .contact{
+
+        &__info{
+            padding: 45px 80px 45px 50px;
+        }
+
+        .container{
+            margin-top: 80px;
+        }
+    }
+}
+
 
 @media screen and (min-height: 960px) and (max-height: 1024px){
     .home{
@@ -210,10 +291,33 @@
 
     .contact{
         .container{
-            margin-top: 50px;
+            margin-top: 120px;
         }
         &__info{
             padding: 45px 120px 45px 50px;
+        }
+    }
+
+    .girl{
+
+        &__description{
+            top: 20%;
+        }
+
+        .title_medium{
+            font-size: 62px;
+        }
+
+        &__btn{
+            bottom: -200px;
+        }
+    }
+
+    .slider-girl{
+        top: 35%;
+
+        img{
+            width: 350px;
         }
     }
 }
@@ -225,5 +329,17 @@
         }
     }
 
+    .slider-girl{
+        top: 35%;
 
+        img{
+            width: 350px;
+        }
+    }
+
+    .contact{
+        .container{
+            margin-top: 150px;
+        }
+    }
 }
