--- a/scss/media.scss
+++ b/scss/media.scss
@@ -40,7 +40,7 @@
     }
 
     .home{
-        background-position-x: -390px;
+        background-position-x: center;
 
         &__title{
             line-height: 55px;
@@ -114,7 +114,7 @@
         left: 0;
     }
     .nav-link{
-        font-size: 18px;
+        font-size: 32px;
     }
 
     .servise{
@@ -156,6 +156,10 @@
     }
     .slider-girl{
         right: 22%;
+    }
+
+    .nav-link{
+        font-size: 18px;
     }
 
 }
@@ -212,9 +216,17 @@
         }
     }
 
+    .servise{
+        &__info-programs{
+            width: 65%;
+            right: 20%;
+        }
+    }
+
     .slider-girl{
         right: 33%;
     }
+    
 }
 
 @media screen and (min-height: 600px) and (max-height: 960px){
@@ -242,6 +254,7 @@
     }
 
     .contact{
+        padding-top: 120px;
 
         &__info{
             padding: 5px 80px 5px 50px;
@@ -253,6 +266,12 @@
 
         img{
             width: 200px;
+        }
+    }
+
+    .servise{
+        &____sub-title{
+            margin-left: 20% !important;
         }
     }
 }
@@ -275,6 +294,10 @@
         .container{
             margin-top: 80px;
         }
+    }
+
+    .servise{
+        padding-top: 20%;
     }
 }
 
