--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,10 +44,6 @@ html{
     max-width: 1600px;
 }
 
-.bg-black{
-    background-color: #000;
-}
-
 p{
     margin-bottom: 0;
 }
@@ -156,9 +152,14 @@ a{
     }
 }
 
+.navbar{
+    background-color: rgba($color: #000000, $alpha: .7);
+}
+
 .nav-link{
     font-size: 28px;
 }
+
 
 .navbar-nav{
     .active{
@@ -267,6 +268,8 @@ a{
 .home{
     @extend %bg-img;
     background-image: url(../img/home/bg.jpg);
+    padding-top:100px;
+    background-position-x: center;
 
     &__title{
         line-height: 35px;
@@ -279,7 +282,7 @@ a{
         margin-left: 0px;
     }
     p{
-        width: 70%;
+        width: 58%;
     }
 }
 
@@ -527,4 +530,8 @@ a{
     img{
         width: 60px;
     }
+}
+
+.bg-black{
+    background-color: #000;
 }
